# claude-code-skill-ctrlx-app-dev

./: 01-overview.md  02-project-scaffold.md  03-datalayer-dev.md  04-snap-config.md  05-build-deploy.md  06-compliance.md  README-cn.md  README.md  SKILL.md
docs/plans/: 2026-03-19-ctrlx-skill-improvement-design.md  2026-03-19-ctrlx-skill-improvement.md  2026-03-20-build-command-setup-detection.md  2026-03-20-english-localization.md  2026-03-20-localization-english-design.md
templates/: CMakeLists.txt  dev-loop.ps1  dev-loop.sh  package-manifest.json  provider-template-cpp.cpp  provider-template-csharp.cs  provider-template.py  snapcraft-cpp.yaml  snapcraft-csharp.yaml  snapcraft-python.yaml
